--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div id="social">
         <span id="social-title">LET'S TALK</span>
         <img class="social-icons" src="images/facebook-ic.png">
-        <img class="social-icons" src="images/twitter-ic.png">
-        <img class="social-icons" src="images/google-ic.png">
+        <img class="social-icons" src="images/github-ic.png">
+        <img class="social-icons" src="images/linkedin-ic.png">
       </div>
     </aside>
 
@@ -57,7 +57,7 @@
 
             <img src="images/first-tn.png">
 
-            <div class="art-title">Slow and Steady Win the Race</div>
+            <div class="art-title">Take Time to Enjoy the Little Things</div>
             <div class="art-excerpt">
               Here is a random picture
               of something and isn’t
@@ -74,7 +74,7 @@
 
             <img src="images/second-tn.png">
 
-            <div class="art-title">Take Time to Enjoy the Little Things</div>
+            <div class="art-title">Eat Healthy Stay Healthy</div>
             <div class="art-excerpt">
               Here is a random picture
               of something and isn’t
@@ -91,7 +91,7 @@
 
             <img src="images/third-tn.png">
 
-            <div class="art-title">Always Keep Your Eyes on the Prize</div>
+            <div class="art-title">Go Slow But Go Strong</div>
             <div class="art-excerpt">
               Here is a random picture
               of something and isn’t
@@ -108,7 +108,7 @@
 
             <img src="images/fourth-tn.png">
 
-            <div class="art-title">The Benefits of Being Cute</div>
+            <div class="art-title">Thank God For What You Have</div>
             <div class="art-excerpt">
               Here is a random picture
               of something and isn’t
